# models/Employee.js
@@ -5,7 +5,9 @@ const EmployeeSchema = new mongoose.Schema({
     lastName: { type: String, required: true },
     department: { type: String, required: true },
     email: { type: String, required: true, unique: true },
-    birthday: { type: Date }
+    birthday: { type: Date },
+    Hobby: { type: String, required: true },
+    University: { type: String, required: true }
 });
 
 module.exports = mongoose.model('Employee', EmployeeSchema, 'employees');
